--- a/client/src/app/styles/SimViewCanvas.css
+++ b/client/src/app/styles/SimViewCanvas.css
@@ -1,5 +1,5 @@
 .sim-view-canvas-container {
     height: 100vh;
-    width: 100vw;
-
+    width: calc(100vw - 360px);
+    background-color: #363636;  
 }
